<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>spmr02</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for spmr02</p>
    <p>This package contains configuration data, 3D models and launch files
for spmr02 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>rostest</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo</exec_depend>


  <export>
    <architecture_independent />
  </export>
</package>



<!--  -->
<!-- <?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>diff_drive</name>
  <version>1.0.0</version>
  <description>
    This package implements a control mechanism for a differential drive robot.
  </description>
  <author>Mark Rose</author>
  <maintainer email="markrose@acm.org">Mark Rose</maintainer>
  <url type="website">https://github.com/merose/diff_drive</url>
  <url type="repository">https://github.com/merose/diff_drive.git</url>
  <url type="bugtracker">https://github.com/merose/diff_drive/issues</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>rostest</build_depend>
  <depend>message_generation</depend>
  
</package> -->
