<?xml version="1.0"?>
<package format="2">
  <name>spmr_teleop</name>
  <version>1.2.6</version>
  <description>
    Provides teleoperation using keyboard for TurtleBot3.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <author email="">D</author>
  <author email="">P</author>
  <maintainer email="">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_teleop</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
